Verifica las entradas al crear vuelos, pasajeros, locations, y aviones